Implementation (#2)
This pull request includes several changes to add PostgreSQL support,
configure development tools, and update workflows. The most important
changes include adding a PostgreSQL service to the Docker setup,
creating scripts for database initialization, implementing a user
adapter, and configuring new GitHub workflows for commit and review
checks.

### PostgreSQL Integration:
*
[`.devcontainer/docker-compose.yml`](diffhunk://#diff-67a4805fdcc6145d7b3ada2a6099a9b2e91c9d0fd108c22f95d2f01d219793d1R4-R19):
Added PostgreSQL service configuration to the Docker setup.
* `.devcontainer/shells/post_create/shells.d/01_create_database.sh`,
`.devcontainer/shells/post_create/shells.d/02_create_indexes.sh`,
`.devcontainer/shells/post_create/shells.d/03_create_tables.sh`,
`.devcontainer/shells/post_create/shells.d/04_create_views.sh`: Added
scripts for creating the database, indexes, tables, and views during the
post-create phase.
[[1]](diffhunk://#diff-f29e9d924d54db09d2cf714af7b1002923d8fa67db329ce9c493a60cfca42aedR1-R6)
[[2]](diffhunk://#diff-9e700e29ec18bf36639c1140240da01c515829c1fc4fad48d41c2ae6558b6fb5R1-R14)
[[3]](diffhunk://#diff-b1076deab6812be8e70988bb080b0e4ec19710c2526da7bddc7d7a11a0c49575R1-R14)
[[4]](diffhunk://#diff-cd5ddc68944fe0ee7c93ce9c51fcb53c6013f154572d7b64e388cabf2d9a8a1bR1-R14)

### User Adapter Implementation:
*
[`Adapters/UserAdapter.cs`](diffhunk://#diff-db6f0c03c5c6d1ca3412542dfb37661096e41d496b0a3547fc733dcce10699b3R1-R180):
Implemented the `UserAdapter` class to handle user-related database
operations using `IUserDatabaseClient`.

### Configuration and Initialization:
*
[`Databases/Clients/ConfigLoader.cs`](diffhunk://#diff-a9f5efbe264fda37de38f8005ce4834cd8f7a108784d04623662c1f9065f6347R1-R86):
Added a static class to load database configuration from environment
variables.
* `.devcontainer/shells/root/shells.d/install_postgres.sh`,
`.devcontainer/shells/user/shells.d/init_postgres.sh`: Added scripts
